# Subtask

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  python-app.yml
subtask/: __init__.py  __subtask.py
tests/: test_subtask.py
tests/programs/: check_env.py
