[tool.poetry]
name = "subtask"
version = "1.1.1"
description = "A simple wrapper around `subprocess.Popen` to reduce the painfulness of running multiple processes concurrently."
authors = ["Maddy Guthridge <hdsq@outlook.com.au>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/MaddyGuthridge/subtask"
documentation = "https://github.com/MaddyGuthridge/subtask"

keywords = [
    "popen",
    "task",
    "process",
    "subprocess",
    "subtask",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
include = ["py.typed"]

packages = [
    { include = "subtask" }
]

[tool.poetry.urls]
"Online Documentation" = "https://github.com/MaddyGuthridge/subtask"
"Bug Tracker" = "https://github.com/MaddyGuthridge/subtask/issues"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<9.0.0"
mypy = "^1.3.0"
flake8 = ">=6,<8"
typing-extensions = "^4.6.2"
autopep8 = "^2.0.2"
coverage = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
