[project]
name = "subtask"
version = "1.1.2"
description = "A simple wrapper around `subprocess.Popen` to reduce the painfulness of running multiple processes concurrently."
authors = [{ name = "Maddy Guthridge", email = "hello@maddyguthridge.com" }]
license = "MIT"
readme = "README.md"

keywords = ["popen", "task", "process", "subprocess", "subtask"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]

requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/MaddyGuthridge/subtask"
documentation = "https://github.com/MaddyGuthridge/subtask"
"Bug Tracker" = "https://github.com/MaddyGuthridge/subtask/issues"

[tool.poetry]

include = ["py.typed"]

[tool.mypy]
check_untyped_defs = true
files = ["subtask", "tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.3.1,<9.0.0"
mypy = "^1.18.2"
typing-extensions = "^4.15.0"
coverage = "^7.10.7"
ruff = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
