[project]
name = "subtask"
version = "1.1.2"
description = "A simple wrapper around `subprocess.Popen` to reduce the painfulness of running multiple processes concurrently."
authors = [{ name = "Maddy Guthridge", email = "hello@maddyguthridge.com" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["popen", "task", "process", "subprocess", "subtask"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
repository = "https://github.com/MaddyGuthridge/subtask"
documentation = "https://github.com/MaddyGuthridge/subtask"
"Bug Tracker" = "https://github.com/MaddyGuthridge/subtask/issues"


[dependency-groups]
dev = [
    "pytest>=7.3.1,<9.0.0",
    "mypy>=1.19.1",
    "typing-extensions>=4.15.0",
    "coverage>=7.10.7",
    "ruff>=0.14.10",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "subtask"
module-root = ""

[tool.mypy]
check_untyped_defs = true
files = ["subtask", "tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    'if TYPE_CHECKING:',
    'return NotImplemented',
    '@overload',
    'raise AssertionError',
    'raise NotImplementedError',
]
