[metadata]
name = Subtask
version = 0.1.0
author = Miguel Guthridge
author_email = hdsq@outlook.com.au
description = "A simple wrapper around `subprocess.Popen` to reduce the painfulness of running multiple processes concurrently."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MiguelGuthridge/Subtask
project_urls =
    Online Documentation = https://github.com/MiguelGuthridge/Subtask
    Bug Tracker = https://github.com/MiguelGuthridge/Subtask/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Framework :: Pytest
keywords =
    subprocess

[options]
packages = find:
python_requires = >=3.9.1
include_package_data = True

[options.packages.find]
where = .
include =
    subtask
    subtask.*
exclude =
    tests
